cmd/bosc/tests/owned_scalar_transfer_dispose_new_owner_err_test.bos
package main

import "fmt"

fn main() {
	handle owned i64 := 10
	handle2 owned i64 := handle // transfer; handle2 owns the resource
	c i64 := handle2            // borrow the new owner
	dispose(handle2)            // resource gone
	fmt.print("%d\n", c)        // error: c views a disposed resource
}
